# boto3_aws

./: README.md  auth.py  main.py  note1.txt  note2.txt  pyproject.toml
bucket/: crud.py  encryption.py  lifecycle.py  policy.py  versioning.py
object/: crud.py  policy.py
